<resources>
    <string name="app_name">一路向北</string>
    <string name="open_close" translatable="false">全文</string>
    <string name="hint_close" translatable="false">收起</string>
    <string name="hint_full_text" translatable="false">全文</string>
    <string name="press_exit_again" translatable="false">再按一次退出程序</string>
    <string name="save_pic_success" translatable="false">图片已保存到</string>
    <string name="behavior_sample_title" translatable="false">community.com.tmvp.view.myview.SampleTitleBehavior</string>
    <string name="login_title" translatable="false">你好，\n欢迎来到桃花源纪</string>
    <string name="phone_null" translatable="false">手机号码不能为空</string>
    <string name="verification_num_not_null" translatable="false">验证码不能为空</string>
    <string name="not_phone_num" translatable="false">手机号码错误</string>
    <string name="Fill_in_the_correct_mobile_phone_number_and_verification_code" translatable="false">手机号或者验证码错误</string>
    <string name="uploadding" translatable="false">正在上传中~</string>
    <string name="upload_picture" translatable="false">上传图片</string>
    <string name="hint_img_exists" translatable="false">该图片已下载</string>
    <string name="download_img" translatable="false">下载图片</string>
    <string name="go_download_img" translatable="false">正在下载图片</string>
    <string name="video_1" translatable="false">https:\/\/xinzetaoyuan.oss-cn-beijing.aliyuncs.com\/test\/wx_camera_1562152644230.mp4
    </string>
    <string name="notifyTitle" >提示</string>
    <string name="gpsNotifyMsg" >当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting" >前往设置</string>
    <string name="cancel" >取消</string>
    <string name="start_scan" >开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings" >展开搜索设置</string>
    <string name="retrieve_search_settings" translatable="false">收起搜索设置</string>
    <string name="connect_fail" >设备状态：蓝牙门锁连接失败请重试</string>
    <string name="connect_success" >设备状态：蓝牙门锁连接成功</string>
    <string name="disconnected" >设备状态：蓝牙门锁连接已断开</string>
    <string name="connect_start" >设备状态：正在连接蓝牙门锁请稍后…</string>
    <string name="scan_start" >设备状态：开始搜索蓝牙门锁请稍后…</string>
    <string name="scan_scan" >设备状态：正在搜索蓝牙门锁请稍后…</string>
    <string name="scan_finish" >设备状态：蓝牙门锁搜索完成</string>
    <string name="please_open_blue" >请先打开蓝牙</string>
    <string name="select_operation_type" >选择操作类型</string>
    <string name="characteristic" >特性</string>
    <string name="data_changed" >的数据变化：</string>
    <string name="read" >读</string>
    <string name="write" >绑定</string>
    <string name="write2" translatable="false">开锁</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification" >关闭通知</string>
    <string name="service_list" >服务列表</string>
    <string name="characteristic_list" >特征列表</string>
    <string name="console" >操作控制台</string>
    <string name="name" >设备广播名：</string>
    <string name="mac" >MAC:</string>
    <string name="service" >服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting" >在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name" >输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac" >输入蓝牙设备mac地址</string>
    <string name="setting_uuid" >输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex" >请输入HEX格式指令</string>
    <string name="connect" >连接</string>
    <string name="connected" >已连接</string>
    <string name="disconnect" >断开连接</string>
    <string name="enter" >进入操作</string>
    <string name="no_data" >"未拿到数据源,请检查网络"</string>
    <string name="splash_text" translatable="false">Face Recognition</string>
    <string name="main_item_face_register" translatable="false">人脸注册</string>
    <string name="main_item_face_recognition" translatable="false">人脸识别 1v1</string>
    <string name="main_item_face_recognition_n" translatable="false">人脸识别 1vN</string>
    <string name="main_item_face_recognition_id" translatable="false">人脸识别 公安验证</string>
    <string name="main_item_face_live" translatable="false">活体检测</string>
    <string name="main_item_face_detect" translatable="false">人脸图像采集</string>
    <string name="main_item_face_lite" translatable="false">人脸图像验证</string>
    <string name="main_item_face_bank_cards" translatable="false">银行卡</string>
    <string name="main_item_face_id_cards" translatable="false">身份证</string>
    <string name="main_item_face_delete" translatable="false">删除功能</string>
    <string name="play" translatable="false">play</string>
    <string name="stop_playback" translatable="false">stop playback</string>
    <string name="record" translatable="false">record</string>
    <string name="stop_recording" translatable="false">stop recording</string>
    <string name="zero" translatable="false">0</string>
    <string name="homesaty" translatable="false">欢迎来到智能民宿</string>
    <string name="register_name_digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;
    </string>
    <string name="title1" translatable="false">退房清扫</string>
    <string name="title9" translatable="false">绑定蓝牙</string>
    <string name="title7" translatable="false">解绑蓝牙</string>
    <string name="title2" translatable="false">锁相关操作</string>
    <string name="title3" translatable="false">蓝牙开门</string>
    <string name="title4" translatable="false">房间详情</string>
    <string name="title5" translatable="false">创建订单</string>
    <string name="title6" translatable="false">订单列表</string>
    <string name="title8" translatable="false">房间详情</string>
    <string name="title10" translatable="false">设置空净</string>
    <string name="title11" translatable="false">离线密码</string>
    <string name="city_select" translatable="false">地区选择</string>
    <string name="code223120" translatable="false">此次活体检测结果为非活体</string>
    <string name="code223114" translatable="false">人脸模糊，拍摄时不要晃动手机</string>
    <string name="code222203" translatable="false">请检查图片质量，重新上传含有清晰人脸的图片</string>
    <string name="cannot_scan_without_permission" translatable="false">没有权限无法扫描</string>
    <string name="lock_about">锁相关操作</string>
    <string name="gateway_about">网关</string>
    <string name="upgrade_about">锁升级相关</string>
    <string name="passcode_about">密码相关</string>
    <string name="fingerprint_about">指纹相关</string>
    <string name="ic_card_about">IC 卡相关</string>
    <string name="passageModeEnter">设置常开模式</string>
    <string name="lockTimeAbout">锁时间相关</string>
    <string name="get_time">获取锁时间</string>
    <string name="lock_time_is">当前锁内部时间</string>
    <string name="set_lock_time">设置锁时间</string>
    <string name="get_log">获取锁操作日志</string>
    <string name="get_battery">读取锁电量</string>
    <string name="lock_system_info">获取锁系统信息</string>
    <string name="set_custom_passcode">设置自定义密码</string>
    <string name="input_custom_passcode">输入自定义密码</string>
    <string name="start_date">生效时间:</string>
    <string name="end_date">过期时间:</string>
    <string name="get_lock_status">查询锁状态</string>
    <string name="set_auto_locking_time">设置自动闭锁时间</string>
    <string name="modify_passcode">修改密码</string>
    <string name="delete_passcode">删除密码</string>
    <string name="reset_passcode">重置密码</string>
    <string name="get_valid_passcodes">获取锁中全部密码</string>
    <string name="get_pwdinfo">获取密码校验信息</string>
    <string name="modify_date">只修改有效期</string>
    <string name="modify_passcode_only">只修改密码</string>
    <string name="modify_passcode_and_date">密码和有效期同时修改</string>
    <string name="input_new_passcode">请输入新密码</string>
    <string name="admin_passcode">管理员密码</string>
    <string name="get_admin_passcode">获取锁管理员密码</string>
    <string name="modify_admin_passcode">修改管理员密码</string>
    <string name="add_permanent_ic_card">添加永久有效IC卡</string>
    <string name="add_period_id_card">添加限时IC卡</string>
    <string name="modify_period">修改有效期</string>
    <string name="delete_ic_card">删除IC卡</string>
    <string name="get_all_ic_card">获取锁中所有有效IC卡信息</string>
    <string name="clear_all_ic_card">清空锁中IC卡</string>
    <string name="add_permanent_fingerprint">添加永久有效指纹</string>
    <string name="add_period_fingerprint">添加限时指纹</string>
    <string name="delete_fingerprint">删除指纹</string>
    <string name="get_all_fingerprint">获取锁中所有有效指纹信息</string>
    <string name="clear_all_fingerprint">清空锁中指纹</string>
    <string name="unlock">开锁</string>
    <string name="lock">闭锁</string>
    <string name="rolling_gate_up">卷闸门升起</string>
    <string name="rolling_gate_down">卷闸门下降</string>
    <string name="rolling_gate_pause">卷闸门停止</string>
    <string name="rolling_gate_lock">卷闸门锁定</string>
    <string name="initLock">初始化锁</string>
    <string name="reset_lock">重置锁</string>
    <string name="config_feature">开启/关闭特殊功能</string>
    <string name="reset_key">重置电子钥匙</string>
    <string name="lock_mute_mode">锁静音模式</string>
    <string name="remote_unlock">远程开门功能</string>
    <string name="passcode_visible">输入密码是否明文模式</string>
    <string name="passage_mode">常开模式</string>
    <string name="query">查询</string>
    <string name="my_fingerprint_list">我的指纹列表</string>
    <string name="my_card_list">我的IC卡列表</string>
    <string name="check_version">检查更新</string>
    <string name="recheck_version">再次检测更新</string>
    <string name="words_status">状态</string>
    <string name="words_version_info">版本信息</string>
    <string name="retry">重试</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="enter_account">输入账号</string>
    <string name="enter_password">输入密码</string>
    <string name="authorize">授权</string>
    <string name="get_passage_mode">获取常开模式数据</string>
    <string name="set_passage_mode">设置常开模式</string>
    <string name="delete_passage_mode">删除单个常开模式设置</string>
    <string name="clear_passage_mode">清空常开模式设置</string>
    <string name="initGateway">初始化网关</string>
    <string name="gateway_operate_info">将网关重新通电，指示灯交替闪烁时点击扫描</string>
    <string name="scan">扫描</string>
    <string name="words_wifi_name">WiFi名称</string>
    <string name="words_wifi_pwd">WiFi密码</string>
    <string name="words_gateway_name">网关名称</string>
    <string name="add">添加</string>
    <string name="gateway_out_of_time">连接超时，已退出添加模式</string>
    <string name="no_updates">已是最新版本</string>
    <string name="new_version_found">有新版本</string>
    <string name="unknown_lock_version">锁版本未知</string>
    <string name="upgrade">升级</string>
    <string name="retry_by_net">通过网络重试</string>
    <string name="retry_by_ble">通过蓝牙重试</string>
    <string name="dialog_cancel">取消</string>
    <string name="select_net">选择网络</string>
    <string name="wirelesskeyboard">无线键盘</string>
    <string name="bedroom_txt" translatable="false">提示：未避免因户型信息与图片不符产生投诉，请保证上传图片高清、无水印、无联系方式、logo</string>
    <string name="link_text_manual"><u>下划线</u>
    </string>
    <string name="no_room">暂无房间</string>
    <string name="no_order">暂无订单</string>
    <string name="comfirm">确认</string>
    <string name="reject">拒绝</string>
    <string name="no_search_device">没有查到任何设备</string>
    <string name="no_search_bluetouch_name">未查到蓝牙名</string>
    <string name="lock_already_isband">此门锁已绑定</string>
    <string name="get_bluetouch_name">获取蓝牙名</string>
    <string name="lock_connect">搜索门锁</string>
    <string name="weicat_no_edit">微信订单不能修改时间</string>
    <string name="bind_lock">绑定</string>
    <string name="unbind_lock">解绑</string>
    <string name="lock_state">查询状态</string>
    <string name="lock_battery">查询电量</string>
    <string name="nb_imei">查询IMEI</string>
    <string name="lock_login">进登录状态</string>
    <string name="open_lock">蓝牙解锁</string>
    <string name="sync_clock">同步时间</string>
    <string name="add_pincode">添加密码</string>
    <string name="del_pincode">删除密码</string>
    <string name="add_rf_card">添加房卡</string>
    <string name="del_rf_card">删除房卡</string>
    <string name="add_fingerprint">添加指纹</string>
    <string name="del_fingerprint">删除指纹</string>
    <string name="change_admin_pincode">修改管理密码</string>
    <string name="gen_offline_pincode">生成离线限时密码</string>
</resources>