<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/rlt_toolbar" />

    <Button
        android:id="@+id/btn_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_about"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_passcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passcode_about"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_about"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ic_card_about"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_firmware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_about"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_wireless_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wirelesskeyboard"
        android:textAllCaps="false" />
</LinearLayout>
